<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/register_imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/book_shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.04"
        android:text="@string/welcome"
        android:textSize="32sp"
        android:textStyle="bold"
        android:theme="@style/Theme.SignInUp"
        app:layout_constraintStart_toStartOf="@id/register_imageView"
        app:layout_constraintTop_toBottomOf="@+id/register_imageView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/register_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_in_to_continue"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/register_username_edt"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="36dp"
        android:drawableStart="@drawable/email_drawable_selector"
        android:drawablePadding="10dp"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/design_default_color_primary"
        android:theme="@style/Theme.SignInUp"
        app:layout_constraintBottom_toTopOf="@+id/register_password_edt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
      />

    <EditText
        android:id="@+id/register_password_edt"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:drawableStart="@drawable/password_drawable_selector"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/design_default_color_primary"
        android:theme="@style/Theme.SignInUp"
        app:layout_constraintEnd_toEndOf="@+id/register_username_edt"
        app:layout_constraintStart_toStartOf="@+id/register_username_edt"
        app:layout_constraintTop_toBottomOf="@+id/register_username_edt" />

    <TextView
        android:id="@+id/already_register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_registered"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/register_password_edt"
        app:layout_constraintTop_toBottomOf="@+id/register_password_edt" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:theme="@style/Theme.SignInUp"
        app:layout_constraintEnd_toEndOf="@+id/already_register_tv"
        app:layout_constraintStart_toStartOf="@+id/register_password_edt"
        app:layout_constraintTop_toBottomOf="@+id/already_register_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>